# birdman

./: Cargo.toml
libs/genetic-algorithm/: Cargo.toml
libs/genetic-algorithm/src/: chromosome.rs  individual.rs  lib.rs  statistics.rs
libs/genetic-algorithm/src/crossover/: uniform.rs
libs/genetic-algorithm/src/mutation/: gaussian.rs
libs/genetic-algorithm/src/selection/: roulette_wheel.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: layer.rs  lib.rs  neuron.rs
libs/simulation/: Cargo.toml
libs/simulation-wasm/: Cargo.toml
libs/simulation-wasm/src/: animal.rs  lib.rs  world.rs
libs/simulation/src/: animal.rs  animal_individual.rs  brain.rs  eye.rs  lib.rs  world.rs
wasm_app/: index.html  index.js  package-lock.json  package.json  webpack.config.js
