[package]
name = "lib-simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.26", features = ["rand-no-std"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }

lib-genetic-algorithm = { path = "../genetic-algorithm" }
lib-neural-network = { path = "../neural-network" }

[dev-dependencies]
test-case = "1.1"